# cancan_microstack

./: .gitignore  CANCAN_MICROSTACK_CORE_RUNTIME_CLI.md  MANIFEST.in  README.md  __init__.py  __version__.py  pyproject.toml
.github/workflows/: publish.yml
assets/: __init__.py
assets/builds/caddy/: .gitignore  Caddyfile  DEPLOYMENT.md  Dockerfile  README.md  start.sh
assets/builds/caddy/geoip/: README.md
assets/builds/caddy/waf/: coraza.conf
assets/builds/caddy/www/: .gitignore
assets/builds/service/: Dockerfile  README.md
assets/ddl/: create_db.sql  trigger.sql
assets/ddl/infra/: execution_log_tbl.sql  node_instance_tbl.sql  service_action_log_tbl.sql  service_config_tbl.sql  service_info_tbl.sql  service_instance_tbl.sql  service_operation_tbl.sql  workflow_definition_tbl.sql  workflow_definition_version_tbl.sql  workflow_engine_alert_tbl.sql  workflow_run_tbl.sql
assets/ddl/ops/: admin_user_tbl.sql  caddy_access_log_tbl.sql  caddy_certificate_tbl.sql  caddy_rate_limit_tbl.sql  caddy_route_tbl.sql  caddy_stats_tbl.sql
assets/docker/: docker-compose.infra.yml
assets/env/: env.example
assets/scripts/: README.md  start_controllersrv.sh
assets/scripts/docker/: build_images.sh  force_rebuild_images.sh  rebuild_all.sh  rebuild_compose.sh  restart.sh  restart_compose.sh  start.sh  start_all.sh  start_compose.sh  stop.sh  stop_all.sh  stop_compose.sh
assets/scripts/podman/: build_images_podman.sh  cleanup_podman.sh  force_rebuild_images_podman.sh  rebuild_all_podman.sh  rebuild_compose_podman.sh  restart_compose_podman.sh  start_all_podman.sh  start_compose_podman.sh  start_podman.sh  stop.sh  stop_all_podman.sh  stop_compose_podman.sh
assets/scripts/utils/: check_all_db_tables.sh  check_env.sh  check_service_management_deployment.sh  deploy_service_management.sh  force_reload_infrasrv.sh  monitor_service_management.sh  reset_postgres_volume.sh  test_async_operations.sh  verify_real_operations.sh
assets/service/: Dockerfile
assets/www/adminops/: index.html
assets/www/adminops/assets/: AppEmpty.vue_vue_type_script_setup_true_lang-BOKUurnM.js  AppEmpty.vue_vue_type_script_setup_true_lang-Bf2bE_Hw.js  AppEmpty.vue_vue_type_script_setup_true_lang-DA9qbeeR.js  ConfigManage-DKV5YOUz.js  ConfigManage-Y5bhy7wG.css  ConfigManage-xlb34pwd.js  ConfigManage-yvXFY32G.js  ConsoleManage-51P0KZEV.js  ConsoleManage-8ljYvCW2.js  ConsoleManage-BWpyqbuQ.css  ConsoleManage-DSJYsKqv.js  DashboardNew-B9Nf1OPl.js  DashboardNew-BB6NMZgC.js  DashboardNew-BVFcXUNv.js  DashboardNew-DYWZKQ1V.css  LogSearch-CA0Jhe78.js  LogSearch-CCZfTNPF.css  LogSearch-CoJXnwAZ.js  (+86 more)
cli/: __init__.py  __main__.py  main.py
cmd/: __init__.py
cmd/cancan/: __init__.py  run.py
cmd/controllersrv/: run.py
cmd/infrasrv/: __init__.py  run.py
cmd/opsbffsrv/: __init__.py  run.py
core/: __init__.py  assets.py  compose_builder.py  doctor.py  microstack.py  runner.py  stack_manager.py
docs/: adminops-ui.html  api-reference.html  architecture.html  caddy.html  cli.html  concepts.html  data-model.html  deployment.html  doc.css  index.html  logging.html  nav.js  python-api.html  quickstart.html  registry-health.html  service-controllersrv.html  service-infrasrv.html  service-opsbffsrv.html  workflow-api.html  workflow-concepts.html  workflow-nodes.html  workflow-scheduling.html
public/: __init__.py  error.py
public/api/: __init__.py  controllersrv_client.py  infrasrv_client.py
public/const/: __init__.py  action_consts.py  app_consts.py  caddy_consts.py  controllersrv_consts.py  docker_consts.py  error.py  health_consts.py  hook_enums.py  logging_enums.py  metrics_enums.py  monitor_enums.py  operation_consts.py  opsbffsrv_error.py  overrides_consts.py  redis.py  service_consts.py  workflow_consts.py
public/logging/: initializer.py  mq_handler.py
public/schemas/: __init__.py  common.py  hook_metrics.py  hooks.py  service_operation.py  service_registry.py
public/schemas/caddy/: __init__.py  analysis.py  route.py
public/schemas/controllersrv/: __init__.py  async_requests.py  compose_models.py  const.py  docker_models.py  docker_responses.py  requests.py  responses.py  task_models.py  validation.py
public/schemas/infra/: cleanup.py  container.py  enums.py  health_check.py  hook_log.py  operation.py  overview.py  push.py  service_action_log.py  service_config.py  service_info.py  service_instance.py  service_management.py  service_operation.py  service_registry.py  status_types.py  workflow.py
public/schemas/logging/: __init__.py  log_event.py
public/schemas/opsbffsrv/: __init__.py  async_ops.py  db_admin.py  db_init.py  service_config.py  service_logs.py
public/types/: __init__.py
public/web/: config_value.py  server.py
runtime/: compose_cmd.py  host_daemon.py  overrides.py  resources.py  workspace.py
services/controllersrv/: __init__.py  router.py
services/controllersrv/application/: docker_compose_app.py
services/controllersrv/conf/: config.py  settings.py
services/controllersrv/domain/: service_validator.py
services/infrasrv/: __init__.py  router.py
services/infrasrv/application/: health_check_app.py  service_config.py  service_logs_app.py  service_management_app.py  service_operation_tracker.py  service_registry.py
services/infrasrv/conf/: config.py
services/infrasrv/infrastructure/: ddl_manager.py
services/opsbffsrv/: __init__.py  router.py
services/opsbffsrv/application/: async_operation_app.py  auth_app.py  db_admin_app.py  db_init_app.py  service_config.py  service_logs_app.py  service_registry.py  workflow_ops_app.py
services/opsbffsrv/conf/: config.py
services/opsbffsrv/infrastructure/: ddl_manager.py
tests/: test_app_server_registry.py  test_assets.py  test_cli.py  test_compose_builder.py  test_config_value.py  test_stack_cli.py  test_workflow_consts.py  test_workflow_engine_flow_baseline.py  test_workflow_inline_queue.py  test_workflow_nodes_baseline.py  test_workflow_ops_app_baseline.py  test_workflow_runtime_context.py  test_workflow_scheduler_risk.py  test_workflow_snapshot_baseline.py
utils/: __init__.py  container_env.py
(+140 files in other folders)
